# terminal_music

./: CMakeLists.txt  a.out  main.c  main.cpp
.cache/clangd/index/: animation.hpp.522FF210F5656E78.idx  animation.hpp.9AE326A97D3D1DF0.idx  box.hpp.145DD652D73B1ECF.idx  box.hpp.7B31EF443AA70D4B.idx  canvas.hpp.A62BE2A7EC465AEE.idx  canvas.hpp.C8C66A1312E8F1E7.idx  captured_mouse.hpp.BFDE151537331543.idx  captured_mouse.hpp.E3F76E36703C4932.idx  color.hpp.817D4AACEFEA7BAC.idx  color.hpp.BCA8B919C4270194.idx  color_info.hpp.5EB80F7D37DCA6C8.idx  component.hpp.19D37E94BEE9B550.idx  component.hpp.AA3B646858B673D1.idx  component_base.hpp.013D33F3E941E596.idx  component_base.hpp.848162549B303549.idx  component_options.hpp.2C09C2B0913EF24F.idx  component_options.hpp.C32C946AA4E636EC.idx  deprecated.hpp.0BF966BA15960AE0.idx  deprecated.hpp.24A50B6BB64E145F.idx  deprecated.hpp.332DFF104FF6F065.idx  deprecated.hpp.5108789B2827F1BD.idx  direction.hpp.9797E4B0437D9A92.idx  direction.hpp.D9E79133F5D87586.idx  elements.hpp.17285A27996CC7FD.idx  elements.hpp.D6E8F17B941A8E3A.idx  event.hpp.7E58DF55CBFE72AB.idx  event.hpp.98E5182569A1506C.idx  flexbox_config.hpp.8ECDA30E63B3DB36.idx  flexbox_config.hpp.C9182684E9609393.idx  linear_gradient.hpp.AC3B416D817DE3E8.idx  linear_gradient.hpp.E59B5512F901EE9F.idx  main.cpp.6E22E50BB4DA9B25.idx  (+19 more)
demo/: custom_component.cpp  demo01.cpp
doc/: index.md  ncurses.md
document/: ftxui.md  index.md
ext/ncurses-6.4/: config.status  edit_man.sh
src/: main.cpp
test/: a.out  demo2.c  export_zh.c  form.c  menu.c  scroll_window.c  window.c
(+143 files in other folders)
